
2001-03-13  Earnie Boyd  <earnie@users.sourceforge.net

	* include/wingdi.h: (DOCINFO) Ansi version defined incorrectly.
	Thanks to: Mattia Barbon <mbarbon@dsi.unive.it>

2001-03-12  Earnie Boyd  <earnie@users.sourceforge.net

	* include/commctrl.h (TBSTYLE_FLAT): New definition.
	(TB_GETBUTTONSIZE): Ditto.
	(TCS_HOTTRACK): Ditto.
	Thanks to: Chris Hansen <popeofpop@softhome.net>

2001-03-01  Earnie Boyd  <earnie@users.sourceforge.net

	* Makefile.in: (snapshot): Add target.
	* lib/Makefile.in: (install-headers): Use installdir variable.
	(installdir): Set value based on target-alias.

2001-02-21  Earnie Boyd  <earnie@users.sourceforge.net

	* include/w32api.h: (_W32API_VERSION): Remove.
	(__W32API_VERSION): Add.
	(__W32API_MAJOR_VERSION): Ditto.
	(__W32API_MINOR_VERSION): Ditto.

2001-02-21  Danny Smith <dannysmith@users.sourceforge.net>

	* include/wingdi.h (struct _DOCINFO[AW]): UNICODE it.
	(StartDoc[AW]): Use UNICODE'd LPDOCINFO[AW] 
	* include/winuser.h (struct tagMOUSEKEYS): Define new structure.
	* include/winerror.h (NTE_*): Add CryptoAPI error codes. 

2001-02-21  Danny Smith <dannysmith@users.sourceforge.net>

	* include/mswsock.h: New file.
	* include/ws2tcpip.h: New file.
	* include/winsock.h (IPPROTO_IGMP): New define.
	(IPPROTO_GGP): Correct value.		
	(SO_* macros): Remove mswsock defines.
	(TCP_BSDURGENT): Likewise.
	(IP_* macros): Add comment warning of WinSock2 incompatibility
	(WSARecvEx): Remove mswsock prototype.
	(TransmitFile): Likewise.
	(AcceptEx): Likewise.
	(GetAcceptExSockaddrs): Likewise.
	(struct _TRANSMIT_FILE_BUFFERS): Remove mswsock definition.
	(#include <mswsock.h>): Add directive and explanatory comment
	* include/winsock2.h (header guard): add guard for  _WINSOCK_H 
	(_WINSOCK_H): Define to prevent later inclusion of winsock.h
	(#include <winsock.h>): Replace directive with winsock.h file content
	The following changes apply to the merged file: 
	(FD_SET): Keep winsock2.h definition, delete winsock.h definition